Tank -in game + some camera rotation

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,4 @@ BattleTank/Content/StarterContent/Textures/T_Wood_Pine_D.uasset
 BattleTank/Content/StarterContent/Textures/T_Wood_Pine_N.uasset
 BattleTank/Content/StarterContent/Textures/T_Wood_Walnut_D.uasset
 BattleTank/Content/StarterContent/Textures/T_Wood_Walnut_N.uasset
+BattleTank/Content/KiteDemo/
